outputs_20260326-112231-85b57cd7/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_pqbqn5km\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_pqbqn5km\src\gtm_tom_3_phase_inverter_pwm.c:159:35: error: 'IfxGtm_Pwm_SubModule_Ch_10' undeclared (first use in this function); did you mean 'IfxGtm_Pwm_SubModule_Ch_1'?
  159 |     channelConfig[1].timerCh    = IfxGtm_Pwm_SubModule_Ch_10;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                   IfxGtm_Pwm_SubModule_Ch_1
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_pqbqn5km\src\gtm_tom_3_phase_inverter_pwm.c:159:35: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_pqbqn5km\src\gtm_tom_3_phase_inverter_pwm.c:167:35: error: 'IfxGtm_Pwm_SubModule_Ch_12' undeclared (first use in this function); did you mean 'IfxGtm_Pwm_SubModule_Ch_2'?
  167 |     channelConfig[2].timerCh    = IfxGtm_Pwm_SubModule_Ch_12;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                   IfxGtm_Pwm_SubModule_Ch_2
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_pqbqn5km\src\gtm_tom_3_phase_inverter_pwm.c:184:32: error: implicit conversion from 'enum <anonymous>' to 'IfxGtm_Cmu_Clk' [-Werror=enum-conversion]
  184 |     config.clockSource.atom    = IfxGtm_Cmu_Fxclk_0;                   /* FXCLK0 for TOM/ATOM */
      |                                ^
cc1.exe: all warnings being treated as errors
